# Cloud.SDK.Embedded

./: README.md
build.linux/: README.md  build.sh
build.rpi/: README.md  build.sh  build_d.sh
build.win/: CloudSDK.cpp.sln
build.win/cloudsdk/: cloudsdk.vcxproj  cloudsdk.vcxproj.filters
build.win/test_cloudstreamer/: test_cloudstreamer.vcxproj  test_cloudstreamer.vcxproj.filters
external_libs/libwebsockets/src/lib/: libwebsockets.h
external_libs/libwebsockets/src/lib/plat/: lws-plat-win.c
src/: CMakeLists.txt  CloudSDK.h  CloudStreamerSDK.cpp  CloudStreamerSDK.h
src/Enums/: CloudReturnCodes.h
src/Interfaces/: ICloudStreamerCallback.h
src/Objects/: CloudShareConnection.h
src/cloud/core/: CloudAPI.h  CloudAPIEndPoints.h  CloudHelpers.h  Uri.h
src/cloud/core/CameraManager/: CameraEvent.h  CameraManager.cpp  CameraManager.h  CameraManagerByeReasons.h  CameraManagerCommands.h  CameraManagerConfig.h  CameraManagerDoneStatus.h  CameraManagerParams.h  ICameraManagerCallback.h  StreamConfig.h  StreamConfigAudio.h  StreamConfigVideo.h
src/cloud/core/CloudCommon/: CloudRegToken.h  CloudToken.h
src/utils/: Context.h  FileRing.cpp  FileRing.h  MLog.cpp  MLog.h  _cunk.h  base64.c  base64.h  utils.cpp  utils.h  windefsws.cpp  windefsws.h  wswrap.cpp  wswrap.h
test/: CMakeLists.txt  test_cloudstreamer.cpp
